--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
     "primeflex": "^4.0.0",
