feat: Implement Donors feature with routing, nearby donors search, and signup functionality
- Added DonorsRoutes for managing donor-related pages including list, details, and creation.
- Created NearbyDonorsPage to search for donors based on user location, blood bank, or medical institution.
- Implemented user signup functionality with validation and error handling.
- Developed admin state management for handling applications and approvals.
- Introduced custom scrollbar styles for better UI experience.
- Added workflow validation for donor registration and application processes.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
+    "lucide-react": "^0.511.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.5",
