--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "antd": "^5.25.4",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
@@ -22,8 +25,10 @@
     "primereact": "^10.9.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "zod": "^3.25.48"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
